@@ -1,5 +1,17 @@
 2015-03-03  Xavi Artigas  <xartigas@fluendo.com>
 
+	* src/gstttmlattribute.c:
+	(gst_ttml_attribute_parse_time_expression),
+	(gst_ttml_attribute_parse):
+	* src/gstttmlenums.h:
+	* src/gstttmlstate.c: (gst_ttml_state_reset),
+	(gst_ttml_state_set_attribute), (gst_ttml_state_get_attribute):
+	* src/gstttmlstate.h:
+	* src/gstttmlutils.c:
+	Add support for subFrameRate.
+
+2015-03-03  Xavi Artigas  <xartigas@fluendo.com>
+
 	* src/gstttmlattribute.c: (gst_ttml_attribute_parse):
 	* src/gstttmlattribute.h:
 	* src/gstttmlenums.h:
